[package]
name = "solaredge_modbus_chargehq_exporter"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["solaredge", "chargehq"]
categories = ["command-line-utilities"]
authors = ["David Rothera <david@rothera.co>"]
repository = "https://github.com/davidrothera/solaredge_modbus_chargehq_exporter"
description = "A simple script to extract single phase export and meter information from a SolarEdge ModBus interface and push it to ChargeHQ"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-modbus = { version = "0.7.1", default-features = false, features = ["tcp"] }
